--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ToGaodeActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".login.loginActivity"></activity>
+        <activity android:name=".login.RegisterActivity" />
+        <activity android:name="com.example.myapplication.login.Main2Activity"
+            tools:ignore="DuplicateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,18 +51,12 @@
             </intent-filter>
         </activity>
 
+    <activity android:name=".MainActivity1"></activity>
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="Rx2yuPlLY4LT6yBLGUm9NDxCWlSCpKSS" />
 
-        <activity android:name=".MainActivity1">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"></activity>
 
         <service
             android:name="com.baidu.location.f"
